--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,41 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri App</title>
-    <script type="module" src="/main.js" defer></script>
-  </head>
 
-  <body>
-    <main class="container">
-      <h1>Welcome to Tauri</h1>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tauri App</title>
+  <script type="module" src="/main.js" defer></script>
+</head>
 
-      <div class="row">
-        <a href="https://tauri.app" target="_blank">
-          <img src="/assets/tauri.svg" class="logo tauri" alt="Tauri logo" />
-        </a>
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-          target="_blank"
-        >
-          <img
-            src="/assets/javascript.svg"
-            class="logo vanilla"
-            alt="JavaScript logo"
-          />
-        </a>
+<body>
+  <main class="container">
+    <h1>Audio Streamer - GStreamer Demo</h1>
+
+    <div class="audio-controls">
+      <h2>Audio Capture & Playback</h2>
+      <p>Click the button below to capture audio from your microphone and play it back in real-time.</p>
+
+      <div class="control-panel">
+        <button id="toggle-audio" type="button">Start Audio</button>
+        <div id="status" class="status">Status: Stopped</div>
       </div>
-      <p>Click on the Tauri logo to learn more about the framework</p>
 
+      <div id="error-msg" class="error-msg"></div>
+    </div>
+
+    <div class="separator"></div>
+
+    <div class="original-demo">
+      <h3>Original Tauri Demo</h3>
       <form class="row" id="greet-form">
         <input id="greet-input" placeholder="Enter a name..." />
         <button type="submit">Greet</button>
       </form>
       <p id="greet-msg"></p>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
+
 </html>
